# TimesheetPro

./: .env.example  .gitignore  QUICKSTART.md  README.md  TIMESHEET_README.md  docker-compose.yml  project_details.md
backend/: .env.example  Dockerfile  README.md  alembic.ini  create_admin.py  debug_configs.py  get_page_token.py  pyproject.toml  register_drive_webhook.py  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_timesheet_uploads.py
backend/app/: auth.py  config.py  main.py  models.py  scheduler.py  schemas.py
backend/app/agent/: graph.py  nodes.py  state.py
backend/app/routers/: approvals.py  auth.py  calendars.py  clients.py  configurations.py  dashboard.py  drive.py  employees.py  integrations.py  monitoring.py  notifications.py  timesheets.py  timesheets_upload.py  webhooks.py
backend/app/services/: drive.py  drive_service.py  drive_webhook.py  email_idle.py  email_service.py  file_storage.py  gemini_service.py  scheduler.py  timesheet_processor.py
backend/app/utils/: token.py
backend/tests/: conftest.py  test_auth.py  test_calendars.py  test_clients.py  test_configurations.py  test_employees.py  test_timesheets.py
src/: Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js
src/src/: App.jsx  index.css
src/src/api/: client.js
src/src/components/: IntegrationCards.jsx  Layout.jsx  ProtectedRoute.jsx
src/src/context/: AuthContext.jsx
src/src/pages/: Calendars.jsx  ClientOnboarding.jsx  Clients.jsx  Configurations.jsx  Connect.jsx  Dashboard.jsx  (+8 more)
